--- a/personal_web_page/index.html
+++ b/personal_web_page/index.html
@@ -39,6 +39,7 @@
                    I am a Geomatics Engineering student based on Ankara. I am trying to 
                     specialize in plugin development and spatial algorithms.<br>
                     <br>
+                </p>
                 <a class="btn btn-full" href="#">CV</a>
                 <a class="btn btn-ghost" href="#">More</a>
             </div>
@@ -69,7 +70,7 @@
              
                 
                 <div class="profile-picture">
-                    <img class="pp" src="resources/img/IMG_8866.jpg">
+                    <img alt="pp" src="resources/img/IMG_8866.jpg">
                 </div>
             </div> 
             <div class="row">  
@@ -182,7 +183,7 @@
                             <label for="name">Name</label>
                         </div>
                         <div class="col span-2-of-3">
-                            <input type="text" name="name" id="name" placeholder="Your name"required>
+                            <input type="text" name="name" id="name" placeholder="Your name" required>
                         </div>
                     </div>
                     <div class="row">
