--- a/personal_web_page/index.html
+++ b/personal_web_page/index.html
@@ -70,7 +70,7 @@
              
                 
                 <div class="profile-picture">
-                    <img alt="pp" src="resources/img/IMG_8866.jpg">
+                    <img src="resources/img/IMG_8866.jpg" >
                 </div>
             </div> 
             <div class="row">  
