--- a/personal_web_page/index.html
+++ b/personal_web_page/index.html
@@ -7,8 +7,8 @@
         <link rel="stylesheet" type="text/css" href="resources/css/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
-   integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
-   crossorigin=""/>
+           integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+           crossorigin=""/>
         <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
            integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
            crossorigin=""></script>
@@ -36,7 +36,7 @@
                     specialize in plugin development and spatial algorithms.<br>
                     <br>
                 </p>
-                <a class="btn btn-full" href="#">CV</a>
+                <a class="btn btn-full" href="C:\Users\mete9\Desktop\personal_web_page\resources\img\Metehan_Ergen_CV.docx" download="Metehan_Ergen_cv">CV</a>
                 <a class="btn btn-ghost" href="#">More</a>
             </div>
         </header>
