--- a/personal_web_page/index.html
+++ b/personal_web_page/index.html
@@ -36,7 +36,7 @@
                     specialize in plugin development and spatial algorithms.<br>
                     <br>
                 </p>
-                <a class="btn btn-full" href="resources\img\Metehan_Ergen_CV.docx" download="Metehan_Ergen_cv">CV</a>
+                <a class="btn btn-full" href="resources\img\Metehan_Ergen_CV.docx" download="Metehan_Ergen_cv.docx">CV</a>
                 <a class="btn btn-ghost" href="#">More</a>
             </div>
         </header>
